@@ -51,6 +51,8 @@
  * Remove pre-startup check for open JMX port (CASSANDRA-12074)
  * Remove compaction Severity from DynamicEndpointSnitch (CASSANDRA-11738)
  * Restore resumable hints delivery (CASSANDRA-11960)
+Merged from 2.2:
+ * Forward writes to replacement node when replace_address != broadcast_address (CASSANDRA-8523)
 Merged from 3.0:
  * Fix file handle leaks due to simultaneous compaction/repair and
    listing snapshots, calculating snapshot sizes, or making schema
